--- a/index.html
+++ b/index.html
@@ -45,13 +45,41 @@
                 <li>Музыка<a href="#"></a></li>
                 <button class="btn--succes">Все проекты</button>
             </ul>
-        </div>
+            <div class="grid container">
+                <div class="card" style="width: 18rem;">
+                    <img src="projects/first.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">An item</li>
+                        <li class="list-group-item">A second item</li>
+                        <li class="list-group-item">A third item</li>
+                    </ul>
+                    <div class="card-body">
+                        <a href="#" class="card-link">Card link</a>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+                 <div class="card" style="width: 18rem;">
+                    <img src="projects/second.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                    </div>
+                     <ul class="list-group list-group-flush">
+                        <li class="list-group-item">An item</li>
+                        <li class="list-group-item">A second item</li>
+                        <li class="list-group-item">A third item</li>
+                    </ul>
+                    <div class="card-body">
+                        <a href="#" class="card-link">Card link</a>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>
     </div>
-    <div class="container">
-        
-    </div>
+
 </body>
 </html>
-
- git config --global user.name "Nurislam Tavaldiev" 
- git config --global user.email tavaldievnurislam@icloud.com
