--- a/index.html
+++ b/index.html
@@ -46,40 +46,133 @@
                 <button class="btn--succes">Все проекты</button>
             </ul>
             <div class="grid container">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 14rem;">
                     <img src="projects/first.svg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <h2 class="card-title">Станьте частью истории! Zaman</h2>
+                        <p class="card-text">Основная цель сайта – производить медицинский контент, удобный, простой в использовании 
+и безопасный для пациентов 
+с различными нозологиями. Med...</p>
                     </div>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">An item</li>
-                        <li class="list-group-item">A second item</li>
-                        <li class="list-group-item">A third item</li>
-                    </ul>
+                    <div class="card under">
+                        <h5>25% из 1000$</h5>
+                    </div>
                     <div class="card-body">
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                       <img src="projects/default_user 1.svg" alt=""><a href="#"></a>
+                        <a href="#" class="card-link">Location</a><img src="projects/Vector.svg" alt="">
                     </div>
                 </div>
-                 <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 14rem;">
                     <img src="projects/second.svg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <h2 class="card-title">Станьте частью истории! Zaman</h2>
+                        <p class="card-text">Создать платформу, объединяющее соотечественников, проживающих 
+за рубежом. В Кыргызстане часто шутят по поводу того, что кыргызов можно встретить в любой...</p>
                     </div>
-                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">An item</li>
-                        <li class="list-group-item">A second item</li>
-                        <li class="list-group-item">A third item</li>
-                    </ul>
+                    <div class="card under">
+                        <h5>25% из 1000$</h5>
+                    </div>
                     <div class="card-body">
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <img src="projects/default_user 1.svg" alt="">
+                        <a href="#" class="card-link">Location
+                            <img src="projects/Vector.svg" alt="">
+                        </a>
                     </div>
                 </div>
-            </div>
+                <div class="card" style="width: 14rem;">
+                    <img src="projects/third.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h2 class="card-title">Платформа для творческих людей. Kontentchi</h2>
+                        <p class="card-text">Контентчи – это площадка для творческих людей, которые хотят поделиться важными знаниями. 
+На этой платформе вы можете делиться: статьями подкастами...</p>
+                    </div>
+                    <div class="card under">
+                        <h5>25% из 1000$</5>
+                    </div>
+                    <div class="card-body">
+                        <a href="#" class="card-link"><img src="projects/default_user 1.svg" alt=""></a>
+                        <a href="#" class="card-link">Location <img src="projects/Vector.svg" alt=""></a>
+                    </div>
+                </div>
+                <div class="card" style="width: 14rem;">
+                    <img src="projects/fourth.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h2 class="card-title">Станьте частью истории! Zaman</h2>
+                        <p class="card-text">Озвучка на кыргызском языке. Создать вместе с вами первый качественный профессиональный перевод видео российского youtube канала ‘Redroom’...</p>
+                    </div>
+                    <div class="card under">
+                        <h5>25% из 1000$</h5>
+                    </div>
+                    <div class="card-body">
+                       <img src="projects/default_user 1.svg" alt=""> <a href="#" class="card-link"></a>
+                        <a href="#" class="card-link">Location <img src="projects/Vector.svg" alt=""></a>
+                    </div>
+                </div>
+               
     </div>
+    <div class="grid container">
+                <div class="card" style="width: 14rem;">
+                    <img src="projects/first.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h2 class="card-title">Станьте частью истории! Zaman</h2>
+                        <p class="card-text">Основная цель сайта – производить медицинский контент, удобный, простой в использовании 
+и безопасный для пациентов 
+с различными нозологиями. Med...</p>
+                    </div>
+                    <div class="card under">
+                        <h5>25% из 1000$</h5>
+                    </div>
+                    <div class="card-body">
+                       <img src="projects/default_user 1.svg" alt=""><a href="#"></a>
+                        <a href="#" class="card-link">Location</a><img src="projects/Vector.svg" alt="">
+                    </div>
+                </div>
+                <div class="card" style="width: 14rem;">
+                    <img src="projects/second.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h2 class="card-title">Станьте частью истории! Zaman</h2>
+                        <p class="card-text">Создать платформу, объединяющее соотечественников, проживающих 
+за рубежом. В Кыргызстане часто шутят по поводу того, что кыргызов можно встретить в любой...</p>
+                    </div>
+                    <div class="card under">
+                        <h5>25% из 1000$</h5>
+                    </div>
+                    <div class="card-body">
+                        <img src="projects/default_user 1.svg" alt="">
+                        <a href="#" class="card-link">Location
+                            <img src="projects/Vector.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="card" style="width: 14rem;">
+                    <img src="projects/third.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h2 class="card-title">Платформа для творческих людей. Kontentchi</h2>
+                        <p class="card-text">Контентчи – это площадка для творческих людей, которые хотят поделиться важными знаниями. 
+На этой платформе вы можете делиться: статьями подкастами...</p>
+                    </div>
+                    <div class="card under">
+                        <h5>25% из 1000$</5>
+                    </div>
+                    <div class="card-body">
+                        <a href="#" class="card-link"><img src="projects/default_user 1.svg" alt=""></a>
+                        <a href="#" class="card-link">Location <img src="projects/Vector.svg" alt=""></a>
+                    </div>
+                </div>
+                <div class="card" style="width: 14rem;">
+                    <img src="projects/fourth.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h2 class="card-title">Станьте частью истории! Zaman</h2>
+                        <p class="card-text">Озвучка на кыргызском языке. Создать вместе с вами первый качественный профессиональный перевод видео российского youtube канала ‘Redroom’...</p>
+                    </div>
+                    <div class="card under">
+                        <h5>25% из 1000$</h5>
+                    </div>
+                    <div class="card-body">
+                       <img src="projects/default_user 1.svg" alt=""> <a href="#" class="card-link"></a>
+                        <a href="#" class="card-link">Location <img src="projects/Vector.svg" alt=""></a>
+                    </div>
+                </div>
 
 </body>
 </html>
