--- a/ashar.html
+++ b/ashar.html
@@ -7,25 +7,30 @@
     <link rel="stylesheet" href="dist/css/style.css">
 </head>
 <body>
-    <div class="ash--hero">
+    <div class="ash-hero">
         <div class="container">
-            <header class="header">
-                <nav class="nav--bar">
-                    <ul>
-                        <span><img class="logo" src="logo/Logo.svg" alt=""></span>
-                        <li><a href="#">Главная</a></li>
-                        <li><a href="#">Все проекты</a></li>
-                        <li><a href="#">Начать проект</a></li>
-                        <li><a href="#">Начать компанию</a></li>
-                    </ul>
-                </nav>
-                <nav class="users">
-                    <li><a href="#">Ашар</a></li>
-                    <li><a href="#"><img src="logo/search.svg" alt=""></a></li>
-                    <li><a href="#"><img src="logo/user.svg" alt=""></a></li>
-                </nav>
+            <header class="ash-header">
+                <div class="ash-header__logo">
+                    <img src="" alt="">
+                </div>
+                <div class="ash-header__menu">
+                    <nav>
+                        <ul>
+                            <li><a href=""></a></li>
+                            <li><a href=""></a></li>
+                            <li><a href=""></a></li>
+                            <li><a href=""></a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="ash-header__user">
+                    <nav>
+                        <li class="ash-header__search"><a href=""></a></li>
+                        <li class="ash-header__user"><a href=""></a></li>
+                        <li><a href=""></a></li>
+                    </nav>
+                </div>
             </header>
-
         </div>
     </div>
     
