navbar html update

--- a/ashar.html
+++ b/ashar.html
@@ -11,23 +11,23 @@
         <div class="container">
             <header class="ash-header">
                 <div class="ash-header__logo">
-                    <img src="" alt="">
+                    <img src="logo/Logo.svg" alt="logo">
                 </div>
                 <div class="ash-header__menu">
                     <nav>
                         <ul>
-                            <li><a href=""></a></li>
-                            <li><a href=""></a></li>
-                            <li><a href=""></a></li>
-                            <li><a href=""></a></li>
+                            <li><a href="#">Главная </a></li>
+                            <li><a href="#">Все проекты</a></li>
+                            <li><a href="#">Начать проект</a></li>
+                            <li><a href="#">Начать кампанию</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="ash-header__user">
                     <nav>
-                        <li class="ash-header__search"><a href=""></a></li>
-                        <li class="ash-header__user"><a href=""></a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="#"></a></li>
+                        <li class="ash-header__search"><img src="logo/search.svg" alt=""><a href="#"></a></li>
+                        <li class="ash-header__user"><img src="logo/user.svg" alt=""><a href="#"></a></li>
                     </nav>
                 </div>
             </header>
